Fixing env variable.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
 SESSION_SECRET=super session secret
-HTTP_SERVER_DOMAIN=kanbas-node-server-app-1-iknp.onrender.com
+HTTP_SERVER_DOMAIN=https://kanbas-node-server-app-1-abqz.onrender.com
